--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/public/logo-no-text.jpg" />
+    <link rel="icon" type="image/jpg" href="/logo-no-text.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phenix deals</title>
   </head>
